<resources>
    <string name="app_name">PracticaEvaluable1ªEvaluacion_Asensio_Sanchez_Alex</string>

    <string name="datosUsuario">Datos del usuario</string>
    <string name="acercaDe">Acerca de la aplicacion</string>

    <string name="botonBuscar">Buscar</string>

    <string name="botonEditar">Editar</string>

    <string name="tvNombre">Nombre</string>
    <string name="tvFechaNac">Fecha nacimiento</string>
    <string name="botonFecha">Seleccionar fecha</string>
    <string name="tvHoraNac">Hora nacimiento</string>
    <string name="botonHora">Seleccionar hora</string>
    <string name="tvSexo">Sexo</string>
    <string name="botonHombre">Hombre</string>
    <string name="botonMujer">Mujer</string>
    <string name="botonOtro">Otro</string>
    <string name="tvFoto">Foto de perfil</string>
    <string name="botonFoto">Seleccionar foto</string>
    <string name="botonAceptarEditar">Confirmar edicion</string>


    <string name="toastAñadidoFavoritos">Cancion añadida afavoritos</string>
    <string name="toastYaEstaAñadidoFavoritos">La cancion ya estaba añadida a favoritos</string>

    <string name="botonAñadirFavorito">Añadir a favoritos</string>
    <string name="botonEliminarFavorito">Eliminar de favoritos</string>

    <string name="toastEliminadaDeFavoritos">Eliminada de favoritos</string>

    <string name="autor">Autor de la app: </string>
    <string name="botonAceptar">Aceptar</string>

    <string name="modoOscuro">Modo oscuro</string>

    <string name="tvContrasena">Contraseña</string>
    <string name="botonAceptarCrear">Aceptar</string>

    <string name="tvUsuario">Usuario</string>
    <string name="tvPassword">Contraseña</string>
    <string name="botonLogin">Iniciar sesion</string>
    <string name="botonRegistrar">Crear cuenta</string>

    <string name="videoPresentacion">Ver video presentacion</string>

    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="borrarCuenta">Borrar cuenta</string>

    <string name="tvTelefono">Telefono</string>

    <string name="audioExplicacion">Ver audio de explicacion</string>

    <string name="importarContactos">Importar contactos</string>

    <string name="preferencias">Preferencias</string>

    <string name="toastCambioIdioma">El cambio de idioma se aplicara la proxima vez que abra la aplicación</string>

    <string name="strModoOscuro">Modo oscuro</string>
    <string name="strIdioma">Idioma</string>
    <string name="strVolumen">Volumen</string>
    <string name="strVolumenSummary">Indique el volumen del video de presentacion</string>

    <string name="servicioBateria">Servicio de bateria iniciado</string>

    <string name="minutosCancion">minutos</string>

    <string name="contactosImportados">Contactos añadidos a la base de datos</string>

    <string name="eliminadaFavorita">eliminada de canciones favoritas</string>

    <string name="usuarioContraseñaIncorrecto">Usuario o contraseña incorrectos</string>

    <string name="usuarioCreado">Usuario creado</string>
    <string name="usuarioYaExistente">Usuario ya existente</string>

</resources>